# tirus-dash

./: .replit  ENDPOINTS_COVERAGE_REPORT.md  app.py  backend_fastapi_completo.py  backend_log.txt  backend_orquestrador.py  backend_server.py  fastapi_simple.py  main.py  package-lock.json  package.json  pyproject.toml  run_backend.py  run_fastapi.py  run_server.py  sistema_rpa.py  start.py  start_backend.py  start_backend.sh  start_backend_integration.py  start_fastapi_only.py  start_full_system.py  start_only_fastapi.py  start_system.py  start_system.sh  test_all_endpoints.js  test_bgtelecom_endpoints.py
attached_assets/: MANUAL APP .DOCX.docx  Pasted--BACKEND-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-r-1748576284852.txt  Pasted--Prompt-Definitivo-BACKEND-Orquestrador-RPA-BEG-Telecomunica-es-1-Contexto-Cr-tico-Voc--1748555236037.txt  Pasted-NFO-Will-watch-for-changes-in-these-directories-home-runner-workspace-backend-INFO-U-1748570084193.txt  azuton.py  controle_execucao_processo_service.py  digitalnet.py  driver.py  embratel.py  minios3_service.py  mongo.py  oi.py  pdf_service.py  sat.py  utilities.py  vivo.py
backend/: RESUMO_SERVICOS_CRUD.md  STATUS_FINAL_SERVICES.md  api_endpoints_mapping.py  api_gateway.py  database_postgresql.py  main.py  main_clean.py  main_postgresql.py  rpa_bgtelecom.db  start_backend.py
client/: tailwind.config.ts  vite.config.ts
scripts/: start_celery_beat.py  start_celery_worker.py
server/: index.ts  real-data-connector.ts  routes-simple.ts  routes.ts  storage-broken.ts  storage.ts
(+119 files in other folders)
