[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "jose>=1.0.0",
    "minio>=7.2.15",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "webdriver-manager>=4.0.2",
    "beautifulsoup4>=4.13.4",
    "platformdirs>=4.3.8",
]
